--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>git test</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, mollitia.</p>
 </body>
 </html>
